--- a/restaurant-back/src/main/resources/application.properties
+++ b/restaurant-back/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/restaurantDB
 
 #	Navode se kredencijali za konekciju na server baze
 spring.datasource.username=postgres
-spring.datasource.password=ftn
+spring.datasource.password=root
 
 #	Umesto da sami pisemo SQL skriptu za kreiranje tabela u bazi, Hibernate kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih (create-drop)
 #	https://www.baeldung.com/spring-boot-data-sql-and-schema-sql
