Bugfix data-h2.sql

--- a/restaurant-back/src/main/resources/application.properties
+++ b/restaurant-back/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.jpa.generate-ddl=true
-#spring.jpa.defer-datasource-initialization=true
+spring.jpa.generate-ddl=true
+spring.jpa.defer-datasource-initialization=true
 
 #	Spring DataSource drajver koji ce se koristiti za komunikaciju aplikacije sa bazom
 spring.datasource.driverClassName=org.postgresql.Driver
