--- a/restaurant-back/src/test/resources/application-test.properties
+++ b/restaurant-back/src/test/resources/application-test.properties
@@ -4,5 +4,5 @@ spring.datasource.username=h2db
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-spring.datasource.platform=h2
+spring.sql.init.platform=h2
 spring.jpa.hibernate.ddl-auto=create-drop
