--- a/restaurant-back/src/main/resources/application.properties
+++ b/restaurant-back/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+token.header=X-Auth-Token
+token.secret=nekasifra
+token.expiration=18000000
+
 spring.jpa.generate-ddl=true
 spring.jpa.defer-datasource-initialization=true
 
