--- a/restaurant-front/package.json
+++ b/restaurant-front/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "apexcharts": "^3.33.0",
+    "ng-apexcharts": "^1.6.0",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
